# math

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  Makefile.in  README.md  aclocal.m4  cmake_install.cmake  config.h  config.h.in  config.status  config.status.lineno  configure  configure.ac  depcomp  install-sh  install_manifest.txt  mathConfig.cmake.in  mathTargets.cmake  missing  test_array
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
html/: annotated.html  array_8h_source.html  array_8hpp_source.html  build_2src_2math_2config_8hpp_source.html  classarray-members.html  classarray.html  classedge-members.html  classedge.html  classedge__coll__graph.dot  classedge__coll__graph.md5  classedge__inherit__graph.dot  classedge__inherit__graph.md5  classes.html  classface-members.html  classface.html  classface__coll__graph.dot  classface__coll__graph.md5  classface__inherit__graph.dot  classface__inherit__graph.md5  classfeature.html  classfeature__inherit__graph.dot  classfeature__inherit__graph.md5  classmath_1_1DomainError-members.html  classmath_1_1DomainError.html  classmath_1_1color-members.html  classmath_1_1color.html  classmath_1_1control_1_1pid-members.html  classmath_1_1control_1_1pid.html  classmath_1_1discrete_1_1Graph_1_1Edge-members.html  classmath_1_1discrete_1_1Graph_1_1Edge.html  classmath_1_1discrete_1_1Graph_1_1EdgeWeighted-members.html  classmath_1_1discrete_1_1Graph_1_1EdgeWeighted.html  classmath_1_1discrete_1_1Graph_1_1Graph-members.html  classmath_1_1discrete_1_1Graph_1_1Graph.html  classmath_1_1discrete_1_1Graph_1_1Node.html  classmath_1_1except_1_1domain-members.html  classmath_1_1except_1_1domain.html  classmath_1_1geo_1_1cuboid-members.html  classmath_1_1geo_1_1cuboid.html  classmath_1_1geo_1_1cuboid__coll__graph.dot  (+155 more)
latex/: annotated.tex  (+126 more)
src/: Makefile  Makefile.am  Makefile.in
src/.deps/: color.Po  hello.Po  main.Po  mat44.Po  plane.Po  quat.Po  vclip.Po  vec2.Po  vec3.Po  vec4.Po
src/math/: color.cpp  color.h  color.hpp  config.h  config.h.in  config.hpp  config.hpp.in  discrete.cpp  discrete.hpp  except.hpp  free.cpp  free.h  free.hpp  mat33.cpp  mat33.h  mat33.hpp  mat44.cpp  mat44.h  mat44.hpp  math.h  plane.cpp  plane.h  plane.hpp  polynomial.h  print.cpp  print.hpp  quat.cpp  quat.h  quat.hpp  transform.cpp  transform.h  transform.hpp  vec2.cpp  vec2.h  vec2.hpp  vec3.cpp  vec3.h  vec3.hpp  vec4.cpp  vec4.h  (+4 more)
src/math/array/: array.h
src/math/control/: pid.cpp  pid.h
src/math/discrete/: discrete.cpp  discrete.hpp
src/math/geo/: height_map.cpp  height_map.hpp  polyhedron.cpp  polyhedron.h  polyhedron.hpp  sphere.hpp
src/math/raw/: raw.cpp  raw.h
src/math/vclip/: vclip.cpp  vclip.h  vclip.hpp
(+37 files in other folders)
