lib_LIBRARIES = libmath.a
libmath_a_SOURCES = math/math.h math/vec2.cpp math/vec2.h \
math/vec3.cpp math/vec4.cpp math/mat44.cpp math/plane.cpp math/color.cpp math/vec3.h math/vec4.h math/mat44.h math/plane.h math/color.h

include_HEADERS = math/math.h math/vec2.h math/vec3.h math/vec4.h math/mat44.h math/plane.h math/color.h


