lib_LIBRARIES = libmath.a

libmath_a_SOURCES = \
		math/math.h \
		math/vec2.h math/vec2.cpp \
		math/vec3.h math/vec3.cpp \
		math/vec4.h math/vec4.cpp \
		math/mat44.h math/mat44.cpp \
		math/plane.h math/plane.cpp \
		math/color.h math/color.cpp \
		math/quat.h math/quat.cpp \
		math/geo/polyhedron.h math/geo/polyhedron.cpp \
		math/vclip/vclip.cpp
		

nobase_include_HEADERS = math/math.h math/vec2.h math/vec3.h math/vec4.h math/mat44.h math/plane.h math/color.h math/quat.h \
		math/geo/polyhedron.h

CXXFLAGS = -std=c++0x

